# NautyTracesInterface

./: .gitignore  .travis.yml  COPYING  LICENSE  Makefile.am  Makefile.in  PackageInfo.g  README  README.md  autogen.sh  configure.ac  init.g  install.sh  makedoc.g  prerequisites.sh  read.g
.github/workflows/: CI.yml
_data/: package.yml
doc/: chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html
examples/: TestMarkus.g  colortest.g  edgeColoured.g  test.g
gap/: NautyGraph.gd  NautyGraph.gi  NautyGraphWithNodeLabels.gd  NautyGraphWithNodeLabels.gd.save  NautyGraphWithNodeLabels.gi  NautyInterface.gd  NautyInterface.gi  NautyTracesInterface.gd  NautyTracesInterface.gi
nauty26r7/: .gitignore  makefile
nauty27r1/: .gitignore  configure  makefile.in
src/: NautyInterface.c  NautyTracesInterface.c
tst/: TestMarkus.tst  colortest.tst  edgeColoured.tst  nodedLabels.tst  test.tst  testall.g
